2009-03-17 Pierre Wieser <pwieser@trychlos.org>

	* src/test/init-dispose-diff.sh:
	Do not take into account some debug messages.

2009-03-16 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c
	(output_to_dir): Output the new action to a file.

	* src/core/na-core-utils.c (info_dir_is_writable):
	Do not emit a warning on 'no such file or directory' error.

	* src/utils/nautilus-actions-new.c
	(output_to_stdout): Output the new action to stdout.
	(output_to_gconf): Output the new action to GConf.

	* src/io-xml/naxml-writer.c (naxml_writer_write_start):
	Add attribute to list node, thus fixing writing of action.

2009-03-15 Pierre Wieser <pwieser@trychlos.org>

	* src/io-xml/naxml-writer.c (naxml_writer_write_start):
	No need to explicitely write item type as the data is marked writable.

	* src/utils/nautilus-actions-new.c:
	Cleanup old command-line code.
	Check for incompatibility between boolean arguments.

	* src/api/na-data-def.h (na_data_def_get_data_def): New function.

	* src/core/na-data-def.c: New file.

	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-profile-factory.c:
	Update command-line options to not have duplicates.

	* src/utils/nautilus-actions-new.c:
	Use new ArgFromDataDef structure and display suitable help.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-item-factory.c:
	* src/core/na-object-profile-factory.c:
	* src/utils/nautilus-actions-new.c:
	Update data definitions to handle command-line arguments.

2009-03-10 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	Define a structure to host NADataDef argument definitions.

	* src/api/na-data-def.h:
	Add parameters to be able to manage command-line arguments.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-id-factory.c:
	* src/core/na-object-item-factory.c: